test/good/functions/var01.px

func sqr(x: Int): Int def
    return x*x

f = sqr
print f(-9)
