test/bad/functions/type10.px

func f(Int x) Int def
    return x

f = f
